--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,28 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --bg: #080c49;
+  --lcolor: #13ffe2;
+  --rcolor: #6318ff;
+}
+@font-face {
+  font-family: 'regular';
+  src: url('../public/assets/fa-brands-400.woff2') format('woff2');
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.gradient-border {
+  border: 3px solid transparent;
+  border-image-source: none;
+  border-image-slice: 1;
+  border-image: linear-gradient(to right, #13ffe2, #6318ff) 1;
+  text-align: center;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+scrollbar-h::-webkit-scrollbar {
+  display: none;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* Hide scrollbar in Firefox */
+.scrollbar-h {
+  scrollbar-width: none;
 }
